--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,45 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
+    background: rgb(27, 27, 31);
 }
 
 .webgl
 {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     outline: none;
+}
+
+.container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 75%;
+    z-index: 1;
+    color: white;
+    margin: 16em 8em;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+p {
+    font-size: 1rem;
+    width: 55%;
+    color: rgb(107, 107, 122);
+}
+
+button {
+    font-size: 1.3rem;
+    padding: 0.5em 1em;
+    margin-top: 3em;
+    background-color: rgb(0, 114, 255);
+    border: none;
+    border-radius: 0.5rem;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
 }
